Anonymous | Login | 2021-01-24 06:51 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0026302 | Open CASCADE | [OCCT] OCCT:Data Exchange | public | 2015-06-02 13:54 | 2020-09-23 11:50 | ||||||||
Reporter | ink | ||||||||||||
Assigned To | gka | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | resolved | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | |||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0026302: New functionality. Converting the assembly to compound. | ||||||||||||
Description | Necessary to create new functionality: converting the assembly to compound. | ||||||||||||
Steps To Reproduce | pload ALL box b1 0 0 0 10 10 10 box b2 10 0 0 10 10 10 box b3 20 0 0 10 10 10 explode b1 explode b2 explode b3 explode b1_1 explode b2_1 explode b3_1 compound b1 b2 c1 compound c1 b3 c2 NewDocument D XAddShape D c2 1 XSetColor D b1 1 0 0 XSetColor D b2 0 1 0 XSetColor D b3 0 0 1 XSetColor D b1_1_4 1 1 0 XSetColor D b2_1_4 0 1 1 XSetColor D b3_1_4 1 0 1 XSetColor D b1_1_3 1 0 1 XSetColor D b2_1_3 1 1 0 XSetColor D b3_1_3 0 1 1 XCompact D c2 DFB D | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | bugs xde bug26302 | ||||||||||||
Attached Files | |||||||||||||
![]() |
|||||||||||
|
![]() |
|
(0041840) git (administrator) 2015-06-02 14:42 |
Branch CR26302 has been created by ink. SHA-1: b49cbd04c45183f6b4e0ac693879bf6571392497 Detailed log of new commits: Author: ink Date: Tue Jun 2 14:42:27 2015 +0300 0026302: New functionality. Converting the assembly to compound. Added new functionality for converting the assembly to compaund. Added new drw command XCompact. Changed DumpShape and DumpAssembly Added test. |
(0041843) git (administrator) 2015-06-02 14:49 |
Branch CR26302 has been updated forcibly by ink. SHA-1: dc6a77ecc3e717767e7aff8dbac67ce8239aa4c3 |
(0044392) gka (developer) 2015-08-18 18:37 |
Branch CR26302 is ready to be tested |
(0044399) mkv (tester) 2015-08-18 20:20 |
Dear ink, could you please rebase branch CR26302 on current master, there are conflict files. |
(0044410) git (administrator) 2015-08-19 12:14 |
Branch CR26302 has been updated forcibly by ink. SHA-1: f08c61064ec52a3a323bf870c92825f096557c36 |
(0044412) gka (developer) 2015-08-19 12:35 |
Branch CR26302 is ready to be tested |
(0044414) git (administrator) 2015-08-19 12:39 |
Branch CR26302 has been updated forcibly by ink. SHA-1: 2092905e3adca1817741376533ab3458a4e07645 |
(0044457) mkv (tester) 2015-08-20 12:58 |
Dear BugMaster, Branch CR26302 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 2092905e3adca1817741376533ab3458a4e07645 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26302-master-occt-64/Debian70-64/bugs/xde/bug26302.html [^] http://occt-tests/CR26302-master-occt-64/Windows-64-VC10/bugs/xde/bug26302.html [^] bugs xde bug26302: OK Testing on Linux: occt component : Total MEMORY difference: 90683087 / 90762094 [-0.09%] Total CPU difference: 17772.12999999894 / 17774.979999998963 [-0.02%] products component : Total MEMORY difference: 24832129 / 24839015 [-0.03%] Total CPU difference: 7363.159999999973 / 6874.220000000016 [+7.11%] Testing on Windows: occt component : Total MEMORY difference: 56846211 / 56855559 [-0.02%] Total CPU difference: 16403.427149499035 / 16438.246572699303 [-0.21%] products component : Total MEMORY difference: 16013614 / 16017814 [-0.03%] Total CPU difference: 5143.243769299953 / 5265.439352599951 [-2.32%] There are following differences in images found by testdiff. http://occt-tests/CR26302-master-occt-64/Debian70-64/diff-Debian70-64.html [^] http://occt-tests/CR26302-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html [^] IMAGE bugs xde bug26314: bug26314_Driver1_Document_d_View1.png differs IMAGE bugs xde bug25441: bug25441_Driver1_Document_d_View1.png differs |
(0045235) git (administrator) 2015-09-08 15:36 |
Branch CR26302 has been updated forcibly by ink. SHA-1: 80002b9038c01d13d10745896ad2c95703df42aa |
(0045237) ink (developer) 2015-09-08 15:41 |
Please retest this branch. |
(0045349) mkv (tester) 2015-09-09 18:43 |
Dear BugMaster, Branch CR26302 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 80002b9038c01d13d10745896ad2c95703df42aa Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26302-master-occt-64/Debian70-64/bugs/xde/bug26302.html [^] http://occt-tests/CR26302-master-occt-64/Windows-64-VC10/bugs/xde/bug26302.html [^] bugs xde bug26302: OK Testing on Linux: occt component : Total MEMORY difference: 92130973 / 91940310 [+0.21%] Total CPU difference: 17696.179999999 / 17713.70999999897 [-0.10%] products component : Total MEMORY difference: 25233538 / 25220029 [+0.05%] Total CPU difference: 7074.129999999999 / 6936.800000000004 [+1.98%] Testing on Windows: occt component : Total MEMORY difference: 57152192 / 57144575 [+0.01%] Total CPU difference: 16380.510602598952 / 16584.46630999933 [-1.23%] products component : Total MEMORY difference: 16226011 / 16225943 [+0.00%] Total CPU difference: 5269.198976699957 / 5398.88260799997 [-2.40%] There are no differences in images found by testdiff. |
(0047206) git (administrator) 2015-10-20 09:04 |
Branch CR26302 has been updated forcibly by ink. SHA-1: b66a53723310b02e8ff8292ed660c2608700845d |
(0047207) ink (developer) 2015-10-20 09:05 |
Please retest this branch. |
(0047246) mkv (tester) 2015-10-20 20:54 |
Dear BugMaster, Branch CR26302 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: b66a53723310b02e8ff8292ed660c2608700845d Number of compiler warnings: occt component : Linux: 8 (8 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: http://occt-tests/CR26302-master-occt-64/Windows-64-VC10/summary.html [^] Failed: v3d materials bug24855, bug24872_1, bug24872_2 v3d raytrace bug24130, bug24819, bug25201, bug25833, bug26070, connected, plastic, refraction, textures Testing cases: http://occt-tests/CR26302-master-occt-64/Debian70-64/bugs/xde/bug26302.html [^] http://occt-tests/CR26302-master-occt-64/Windows-64-VC10/bugs/xde/bug26302.html [^] bugs xde bug26302: FAILED Testing on Linux: occt component : Total MEMORY difference: 92529966 / 92267597 [+0.28%] Total CPU difference: 19913.179999999786 / 19657.53999999973 [+1.30%] products component : Total MEMORY difference: 26240960 / 26295062 [-0.21%] Total CPU difference: 7431.209999999985 / 7414.720000000001 [+0.22%] Testing on Windows: occt component : Total MEMORY difference: 57977968 / 57939402 [+0.07%] Total CPU difference: 18145.225114798806 / 17938.757791298973 [+1.15%] products component : Total MEMORY difference: 17260380 / 17167618 [+0.54%] Total CPU difference: 5748.1064465999825 / 5655.301451699955 [+1.64%] There are differences in images found by testdiff. http://occt-tests/CR26302-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html [^] |
(0047247) mkv (tester) 2015-10-20 20:55 |
Dear ink, Branch CR26302 has been rejected due to: - regressions/differences/improvements - failed test-case for issue - CPU problem (see http://occt-tests/CR26302-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html [^] ) - differences in images |
(0047260) git (administrator) 2015-10-21 11:39 |
Branch CR26302 has been updated by ink. SHA-1: d1d5e1c42f7b600d2855928c9d70b58e6cc3a19a Detailed log of new commits: Author: ink Date: Wed Oct 21 11:38:49 2015 +0300 small corrections |
(0048010) git (administrator) 2015-11-10 15:28 |
Branch CR26302 has been updated forcibly by ink. SHA-1: 20d200197863c6c8d8b922b48ad73af5a4f7cb16 |
(0048109) git (administrator) 2015-11-12 14:30 |
Branch CR26302 has been updated forcibly by ink. SHA-1: 632cbd61690b879f4abf9aaeacf2fde69a92cf70 |
![]() |
|||
Date Modified | Username | Field | Change |
2015-06-02 13:54 | ink | New Issue | |
2015-06-02 13:54 | ink | Assigned To | => abv |
2015-06-02 14:42 | git | Note Added: 0041840 | |
2015-06-02 14:49 | git | Note Added: 0041843 | |
2015-06-02 14:51 | ink | Status | new => resolved |
2015-06-02 14:51 | ink | Steps to Reproduce Updated | View Revisions |
2015-06-19 11:02 | apv | Relationship added | parent of 0026353 |
2015-08-13 11:09 | abv | Assigned To | abv => gka |
2015-08-18 18:37 | gka | Note Added: 0044392 | |
2015-08-18 18:37 | gka | Assigned To | gka => bugmaster |
2015-08-18 18:37 | gka | Status | resolved => reviewed |
2015-08-18 20:20 | mkv | Note Added: 0044399 | |
2015-08-18 20:20 | mkv | Assigned To | bugmaster => ink |
2015-08-18 20:20 | mkv | Status | reviewed => feedback |
2015-08-19 12:14 | git | Note Added: 0044410 | |
2015-08-19 12:15 | ink | Assigned To | ink => gka |
2015-08-19 12:15 | ink | Status | feedback => resolved |
2015-08-19 12:35 | gka | Note Added: 0044412 | |
2015-08-19 12:35 | gka | Assigned To | gka => bugmaster |
2015-08-19 12:35 | gka | Status | resolved => reviewed |
2015-08-19 12:39 | git | Note Added: 0044414 | |
2015-08-19 16:36 | mkv | Assigned To | bugmaster => mkv |
2015-08-20 12:58 | mkv | Note Added: 0044457 | |
2015-08-20 12:58 | mkv | Assigned To | mkv => ink |
2015-08-20 12:58 | mkv | Status | reviewed => feedback |
2015-08-20 12:58 | mkv | Test case number | => bugs xde bug26302 |
2015-09-08 15:36 | git | Note Added: 0045235 | |
2015-09-08 15:38 | ink | Assigned To | ink => |
2015-09-08 15:38 | ink | Assigned To | => mkv |
2015-09-08 15:41 | ink | Note Added: 0045237 | |
2015-09-09 18:43 | mkv | Note Added: 0045349 | |
2015-09-09 18:43 | mkv | Assigned To | mkv => ink |
2015-09-09 18:43 | mkv | Status | feedback => assigned |
2015-10-20 09:04 | git | Note Added: 0047206 | |
2015-10-20 09:05 | ink | Note Added: 0047207 | |
2015-10-20 09:06 | ink | Assigned To | ink => mkv |
2015-10-20 20:54 | mkv | Note Added: 0047246 | |
2015-10-20 20:55 | mkv | Note Added: 0047247 | |
2015-10-20 20:55 | mkv | Assigned To | mkv => ink |
2015-10-21 11:39 | git | Note Added: 0047260 | |
2015-10-21 11:41 | ink | Assigned To | ink => gka |
2015-10-21 11:41 | ink | Status | assigned => resolved |
2015-11-10 15:28 | git | Note Added: 0048010 | |
2015-11-12 14:30 | git | Note Added: 0048109 | |
2015-12-18 15:19 | abv | Target Version | 7.0.0 => 7.1.0 |
2016-10-26 11:55 | gka | Target Version | 7.1.0 => 7.2.0 |
2017-08-15 12:42 | abv | Target Version | 7.2.0 => 7.4.0 |
2019-09-04 13:04 | abv | Target Version | 7.4.0 => 7.5.0 |
2020-09-23 11:50 | gka | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |