0026302: New functionality. Converting the assembly to compound.

Added new functionality for converting the assembly to compaund.
Added new drw command XCompact.
Changed DumpShape and DumpAssembly
Added test.